our journey slider done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,6 +286,11 @@ textarea.form-control:focus {
   font-weight: 600;
   margin-bottom: 1rem;
 }
+@media screen and (max-width: 991px) {
+  .section-title .title {
+    font-size: 2.6rem;
+  }
+}
 .section-title .description {
   max-width: 65rem;
   line-height: 1.5;
@@ -425,7 +430,7 @@ textarea.form-control:focus {
 }
 @media screen and (min-width: 1900px) {
   .container {
-    max-width: 1500px;
+    max-width: 1720px;
   }
 }
 
@@ -1222,10 +1227,18 @@ footer .footer-bottom {
 .about__us {
   padding: 4rem 0;
 }
+.about__us .page_title {
+  margin-bottom: 2rem;
+  font-size: 2rem;
+}
+@media screen and (min-width: 1200px) {
+  .about__us .page_title {
+    font-size: 2.4rem;
+  }
+}
 .about__us .main_menu,
 .about__us .nav-tabs {
   background-color: #f5f5f5;
-  margin: 3rem 0;
   border-bottom: 0;
   display: flex;
   justify-content: start;
@@ -1259,37 +1272,46 @@ footer .footer-bottom {
 .about__us .main_menu li {
   flex: 1 1 0;
 }
-.about__us .tab-content .image-content {
-  height: 75%;
+.about__us .tab-content .text-content p + p {
+  margin-top: 1rem;
 }
 @media screen and (min-width: 1400px) {
   .about__us .tab-content .image-content {
     padding-left: 5rem;
   }
 }
-.about__us .tab-content .image-content img {
-  min-height: 100%;
-  object-fit: cover;
-}
-.about__us .tab-content .boardOfDirectors_tab .row {
+.about__us .tab-content .boardOfDirectors_tab .row, .about__us .tab-content .familyMember .row {
   --bs-gutter-x: 2rem;
   --bs-gutter-y: 3rem;
 }
 @media screen and (min-width: 768px) {
-  .about__us .tab-content .boardOfDirectors_tab .row {
+  .about__us .tab-content .boardOfDirectors_tab .row, .about__us .tab-content .familyMember .row {
     --bs-gutter-x: 3rem;
   }
 }
 @media screen and (min-width: 1200px) {
-  .about__us .tab-content .boardOfDirectors_tab .row {
+  .about__us .tab-content .boardOfDirectors_tab .row, .about__us .tab-content .familyMember .row {
     --bs-gutter-x: 5rem;
     --bs-gutter-y: 5rem;
   }
 }
-.about__us .tab-content .boardOfDirectors_tab .item .thumbnail {
+@media screen and (min-width: 1400px) {
+  .about__us .tab-content .boardOfDirectors_tab .row, .about__us .tab-content .familyMember .row {
+    --bs-gutter-x: 10rem;
+  }
+}
+.about__us .tab-content .boardOfDirectors_tab .item .item-title, .about__us .tab-content .familyMember .item .item-title {
+  font-size: 1.6rem;
+}
+@media screen and (min-width: 992px) {
+  .about__us .tab-content .boardOfDirectors_tab .item .item-title, .about__us .tab-content .familyMember .item .item-title {
+    font-size: 2rem;
+  }
+}
+.about__us .tab-content .boardOfDirectors_tab .item .thumbnail, .about__us .tab-content .familyMember .item .thumbnail {
   position: relative;
 }
-.about__us .tab-content .boardOfDirectors_tab .item .thumbnail::before {
+.about__us .tab-content .boardOfDirectors_tab .item .thumbnail::before, .about__us .tab-content .familyMember .item .thumbnail::before {
   content: "";
   position: absolute;
   top: -0.1rem;
@@ -1298,7 +1320,7 @@ footer .footer-bottom {
   height: 5rem;
   background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgb(245, 245, 245) 85%);
 }
-.about__us .tab-content .boardOfDirectors_tab .item .thumbnail::after {
+.about__us .tab-content .boardOfDirectors_tab .item .thumbnail::after, .about__us .tab-content .familyMember .item .thumbnail::after {
   content: "";
   position: absolute;
   bottom: -0.1rem;
@@ -1307,20 +1329,25 @@ footer .footer-bottom {
   height: 5rem;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgb(245, 245, 245) 85%);
 }
-.about__us .tab-content .boardOfDirectors_tab .item img {
+.about__us .tab-content .boardOfDirectors_tab .item img, .about__us .tab-content .familyMember .item img {
   width: 100%;
-  max-height: 36rem;
+  max-height: 45rem;
   object-fit: cover;
   object-position: center;
 }
-.about__us .tab-content .boardOfDirectors_tab .item .desc {
+.about__us .tab-content .boardOfDirectors_tab .item .desc, .about__us .tab-content .familyMember .item .desc {
   padding: 1rem 0;
 }
-.about__us .tab-content .boardOfDirectors_tab .item .desc .name {
-  font-size: 1.8rem;
+.about__us .tab-content .boardOfDirectors_tab .item .desc .name, .about__us .tab-content .familyMember .item .desc .name {
+  font-size: 1.6rem;
   font-weight: bold;
 }
-.about__us .tab-content .boardOfDirectors_tab .item .desc .designation {
+@media screen and (min-width: 992px) {
+  .about__us .tab-content .boardOfDirectors_tab .item .desc .name, .about__us .tab-content .familyMember .item .desc .name {
+    font-size: 1.8rem;
+  }
+}
+.about__us .tab-content .boardOfDirectors_tab .item .desc .designation, .about__us .tab-content .familyMember .item .desc .designation {
   line-height: 1.5;
 }
 .about__us .corporate_profile .mission_vision_list {
@@ -1352,6 +1379,11 @@ footer .footer-bottom {
   .about__us .leadershipteam .row {
     --bs-gutter-x: 5rem;
     --bs-gutter-y: 5rem;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .about__us .leadershipteam .row {
+    --bs-gutter-x: 10rem;
   }
 }
 .about__us .leadershipteam .border-tlr {
@@ -1396,7 +1428,7 @@ footer .footer-bottom {
 }
 .about__us .leadership_item img {
   width: 100%;
-  max-height: 36rem;
+  max-height: 45rem;
   object-fit: cover;
   object-position: center;
 }
@@ -1410,6 +1442,114 @@ footer .footer-bottom {
 .about__us .leadership_item .desc .designation {
   font-size: 1.4rem;
   line-height: 1.5;
+}
+
+.our_approach .text-content p + p {
+  margin-top: 1.5rem;
+}
+
+.our_journey {
+  margin: 5rem 0;
+}
+.our_journey .swiper-wrapper {
+  padding: 10rem 0 2rem;
+}
+.our_journey .swiper::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 17.75rem;
+  width: 100%;
+  height: 0;
+  border-top: 0.4rem solid #C7C9C7;
+}
+.our_journey .nav_btn {
+  position: absolute;
+  top: 15.75rem;
+  z-index: 99;
+}
+.our_journey .nav_btn svg {
+  transition: all 0.2s ease;
+}
+@media screen and (max-width: 1199px) {
+  .our_journey .nav_btn svg {
+    width: 2rem;
+    height: 4.5rem;
+  }
+}
+.our_journey .nav_btn.swiper-button-disabled {
+  pointer-events: none;
+}
+.our_journey .nav_btn.swiper-button-disabled svg {
+  opacity: 0;
+  visibility: hidden;
+}
+.our_journey .nav_btn.swiper-button-disabled::before {
+  content: "";
+  position: absolute;
+  width: 0.4rem;
+  height: 100%;
+  background-color: #d9d9d9;
+  transition: all 0.2s ease;
+}
+.our_journey .button-prev {
+  left: 0;
+}
+.our_journey .button-prev.swiper-button-disabled::before {
+  left: 0;
+}
+.our_journey .button-next {
+  right: 0;
+}
+.our_journey .button-next.swiper-button-disabled::before {
+  right: 0;
+}
+.our_journey .journey_item {
+  transition: all 0.3s ease;
+}
+.our_journey .journey_item .dot {
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  background-color: #C7C9C7;
+  margin: 2.5rem auto;
+  transition: all 0.3s ease;
+}
+.our_journey .journey_item .content {
+  text-align: center;
+  width: 10rem;
+  height: 10rem;
+  margin: 0 auto;
+  border: 0.5rem solid transparent;
+  border-radius: 50%;
+  display: grid;
+  place-content: center;
+  transition: all 0.25s ease;
+  transform: translateY(-2rem);
+}
+.our_journey .journey_item .month, .our_journey .journey_item .year {
+  color: #C89328;
+  font-weight: bold;
+  font-size: 1.7rem;
+}
+.our_journey .journey_item .description {
+  font-weight: 600;
+  max-width: 15rem;
+  margin: 0 auto;
+  text-align: center;
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+.our_journey .swiper-slide-active .journey_item {
+  transform: translateY(-8.8rem);
+}
+.our_journey .swiper-slide-active .journey_item .description {
+  opacity: 1;
+}
+.our_journey .swiper-slide-active .journey_item .content {
+  border-color: #C7C9C7;
+  background-color: #fff;
+  transform: translateY(0);
 }
 
 .esg_strategy_mision {
@@ -1483,8 +1623,19 @@ footer .footer-bottom {
 .commitments .item.ungc .links {
   display: flex;
   flex-wrap: wrap;
-  gap: 2rem;
+  gap: 1rem;
   margin-top: 3rem;
+}
+@media screen and (min-width: 992px) {
+  .commitments .item.ungc .links {
+    gap: 2rem;
+  }
+}
+@media screen and (max-width: 767px) {
+  .commitments .item.ungc .links .btn-theme {
+    font-size: 1.3rem;
+    padding: 1rem;
+  }
 }
 .commitments .item + .item {
   margin-top: 5rem;
