--- a/assets/sass/pages/_about.scss
+++ b/assets/sass/pages/_about.scss
@@ -132,6 +132,7 @@
         }
     }
     .corporate_profile {
+        padding: 8rem 0;
         .mission_vision_list {
             margin: 5rem 0;
             .title {
@@ -152,6 +153,7 @@
         }
     }
     .leadershipteam {
+        padding: 8rem 0;
         .row {
             --bs-gutter-x: 2rem;
             --bs-gutter-y: 3rem;
